<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ServantDetailActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/name_servant"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp">

            <ImageView
                android:id="@+id/img_servant"
                android:layout_width="270dp"
                android:layout_height="170dp"
                android:src="@android:color/holo_blue_light"/>


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/detail_servant"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="18dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_title_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:layout_marginRight="8dp"
                    android:text="@string/title_detail"/>

                <TextView
                    android:id="@+id/tv_set_detail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@android:color/black"
                    android:text="@string/content_detail"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:text="@string/bio_servant"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="18dp">

            <TextView
                android:id="@+id/tv_set_bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textColor="@android:color/black"
                android:justificationMode="inter_word"
                android:text="@string/content_bio"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</ScrollView>